@@ -1,3 +1,8 @@
+2021-11-16 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>
+
+	* src/z80/gen.c:
+	  Preparations for the rematerialization of stack locations.
+
 2021-11-15 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>
 
 	* src/z80/gen.c:
